引入mybatisplus，并对数据库密码进行加密

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -136,6 +136,12 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+
+        <!-- mybatis-plus 增强CRUD -->
+        <dependency>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
