--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <velocity.version>2.3</velocity.version>
         <jwt.version>0.9.1</jwt.version>
         <hutool.version>5.8.1</hutool.version>
+        <ip2region.version>1.7.2</ip2region.version>
     </properties>
 	
     <!-- 依赖声明 -->
@@ -211,6 +212,12 @@
                 <version>${ruoyi.version}</version>
             </dependency>
 
+            <!-- 离线IP地址定位库 -->
+            <dependency>
+                <groupId>org.lionsoul</groupId>
+                <artifactId>ip2region</artifactId>
+                <version>${ip2region.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
