--- a/pom.xml
+++ b/pom.xml
@@ -21,7 +21,6 @@
         <druid.version>1.2.8</druid.version>
         <bitwalker.version>1.21</bitwalker.version>
         <swagger.version>3.0.0</swagger.version>
-        <kaptcha.version>2.3.2</kaptcha.version>
         <mybatis-spring-boot.version>2.2.2</mybatis-spring-boot.version>
         <pagehelper.boot.version>1.4.1</pagehelper.boot.version>
         <fastjson.version>1.2.80</fastjson.version>
@@ -36,6 +35,7 @@
         <jwt.version>0.9.1</jwt.version>
         <hutool.version>5.8.1</hutool.version>
         <ip2region.version>1.7.2</ip2region.version>
+        <captcha-spring-boot-starter.version>1.2.7</captcha-spring-boot-starter.version>
     </properties>
 	
     <!-- 依赖声明 -->
@@ -170,13 +170,6 @@
                 <version>${jwt.version}</version>
             </dependency>
 
-            <!-- 验证码 -->
-            <dependency>
-                <groupId>com.github.penggle</groupId>
-                <artifactId>kaptcha</artifactId>
-                <version>${kaptcha.version}</version>
-            </dependency>
-
             <!-- 定时任务-->
             <dependency>
                 <groupId>com.ruoyi</groupId>
@@ -217,6 +210,13 @@
                 <groupId>org.lionsoul</groupId>
                 <artifactId>ip2region</artifactId>
                 <version>${ip2region.version}</version>
+            </dependency>
+
+            <!-- 滑块验证码  -->
+            <dependency>
+                <groupId>com.github.anji-plus</groupId>
+                <artifactId>captcha-spring-boot-starter</artifactId>
+                <version>${captcha-spring-boot-starter.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
