所有模块引入lombok，引入spring-boot-configuration-processor，修改代码生成器作者名字

--- a/ruoyi-framework/pom.xml
+++ b/ruoyi-framework/pom.xml
@@ -53,6 +53,12 @@
             <artifactId>ruoyi-system</artifactId>
         </dependency>
 
+        <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
 </project>
