--- a/pom.xml
+++ b/pom.xml
@@ -237,6 +237,7 @@
         <module>ruoyi-quartz</module>
         <module>ruoyi-generator</module>
         <module>ruoyi-common</module>
+        <module>qianyi-tools</module>
     </modules>
     <packaging>pom</packaging>
 
