--- a/ruoyi-admin/src/main/resources/application-dev.yml
+++ b/ruoyi-admin/src/main/resources/application-dev.yml
@@ -75,7 +75,7 @@ spring:
   # redis 配置
   redis:
     # 地址
-    host: 192.168.1.2
+    host: router.jiangqiang.xin
     # 端口，默认为6379
     port: 6379
     # 密码
