--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,7 @@
         <ip2region.version>1.7.2</ip2region.version>
         <captcha-spring-boot-starter.version>1.2.7</captcha-spring-boot-starter.version>
         <lombok.version>1.18.24</lombok.version>
+        <knife4j.version>3.0.3</knife4j.version>
     </properties>
 
     <!-- 依赖声明 -->
@@ -227,6 +228,11 @@
                 <version>${lombok.version}</version>
             </dependency>
 
+            <dependency>
+                <groupId>com.github.xiaoymin</groupId>
+                <artifactId>knife4j-spring-boot-starter</artifactId>
+                <version>${knife4j.version}</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
 
