--- a/ruoyi-system/pom.xml
+++ b/ruoyi-system/pom.xml
@@ -29,6 +29,10 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.github.xiaoymin</groupId>
+            <artifactId>knife4j-spring-boot-starter</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
