--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -161,6 +161,15 @@
             <artifactId>spring-boot-configuration-processor</artifactId>
             <optional>true</optional>
         </dependency>
+
+        <dependency>
+            <groupId>xin.jiangqiang</groupId>
+            <artifactId>qianyi-netdisc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>xin.jiangqiang</groupId>
+            <artifactId>qianyi-tools</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
