--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -60,6 +60,15 @@
             <artifactId>lombok</artifactId>
             <scope>provided</scope>
         </dependency>
+
+        <dependency>
+            <groupId>xin.jiangqiang</groupId>
+            <artifactId>qianyi-netdisc</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>xin.jiangqiang</groupId>
+            <artifactId>qianyi-tools</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
