--- a/ruoyi-admin/pom.xml
+++ b/ruoyi-admin/pom.xml
@@ -63,11 +63,27 @@
 
         <dependency>
             <groupId>xin.jiangqiang</groupId>
+            <artifactId>qianyi-blog</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>xin.jiangqiang</groupId>
             <artifactId>qianyi-netdisc</artifactId>
         </dependency>
         <dependency>
             <groupId>xin.jiangqiang</groupId>
             <artifactId>qianyi-tools</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.2</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
