--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -131,7 +131,7 @@
             <artifactId>easyexcel</artifactId>
         </dependency>
 
-        <!-- hutool-core -->
+        <!-- hutool引入的模块 -->
         <dependency>
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
