从数据库中获取上传方式配置

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -136,6 +136,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-core</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-json</artifactId>
+        </dependency>
 
         <!-- mybatis-plus 增强CRUD -->
         <dependency>
