文件分片上传，秒传到指定目录接口

--- a/ruoyi-common/pom.xml
+++ b/ruoyi-common/pom.xml
@@ -140,6 +140,10 @@
             <groupId>cn.hutool</groupId>
             <artifactId>hutool-json</artifactId>
         </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-crypto</artifactId>
+        </dependency>
 
         <!-- mybatis-plus 增强CRUD -->
         <dependency>
