--- a/ruoyi-ui/package.json
+++ b/ruoyi-ui/package.json
@@ -59,7 +59,11 @@
     "vue-router": "3.4.9",
     "vuedraggable": "2.24.3",
     "vuex": "3.6.0",
-    "crypto-js": "^4.1.1"
+    "crypto-js": "^4.1.1",
+    "@smallwei/avue": "^2.9.11",
+    "spark-md5": "^3.0.2",
+    "vditor": "^3.8.15",
+    "vue-simple-uploader": "^0.7.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.6",
